fix: chat and rooms layout issues on real mobiledevices. Improved responsiveness

--- a/client/src/sass/pages/_messages.scss
+++ b/client/src/sass/pages/_messages.scss
@@ -12,7 +12,7 @@
     position:relative;
     display: flex;
     justify-content: center;
-    background-color: $background-white-4;
+    background-color: $background-black-9;
 }
 
 .container-houseworker{
@@ -33,19 +33,13 @@
 .messages-container{
     width:100%;
     max-width: 1100px;
-    height: 100%;
+    height: 100dvh; // Dynamic viewport height (better for mobile with address bar)
 
     display:flex;
     align-items: center;
-    // align-items: stretch;
 
     background-color: $black-6; 
     box-shadow: 1px 1px 10px 1px rgba(104, 104, 104, 0.87), 0 6px 6px rgba(0,0,0,0.23);
-
-    &.client {
-        margin-top:4em;
-        height: calc(100% - 4em); //reduce top header
-    }
 
     @include lg-breakpoint{
         width: 100%;
@@ -54,8 +48,7 @@
     @include sm-breakpoint{
         flex-direction: column;
         width:100%;
-
-        height: 100vh; // Full viewport height on mobile
+        height: 100dvh;
     }
 
     .rooms-container{
@@ -65,6 +58,10 @@
         height: 100%;
         width: 50%;
         min-width: 300px;
+
+        &.client{
+            padding-top:4rem;
+        }
 
         @include sm-breakpoint{
             height: 100%;
@@ -126,8 +123,13 @@
         flex-direction: column; 
         height: 100%;
         width: 80%;
+        flex:1;
 
         overflow:hidden;
+
+        &.client{
+            padding-top:4rem;
+        }
         
         @include sm-breakpoint{
             width: 100%;
@@ -135,8 +137,7 @@
             display:none;
 
             &.display{
-                // display:unset;
-                display: flex; // Must be flex to maintain layout
+                display: flex; 
                 flex-direction: column;
             }
         }
